z-index fixes

--- a/_sac_styles.css
+++ b/_sac_styles.css
@@ -150,7 +150,7 @@ body {
 	-o-transition: height .6s;
 	
 	left:0px;
-	z-index:100;
+	z-index:150;
 	color: white;
 	width: 100%;
 	
@@ -201,9 +201,9 @@ HOMEPAGE STYLES
 
 *********************************************************/
 
-#homepageSlideshow {overflow:hidden; position:relative;}
+#homepageSlideshow {overflow:hidden; position:relative; z-index:50;}
 #homepageSlideshow a {width:100%;}
-#homepageSlideshow .pager{position:absolute; bottom:10px; left:10px; z-index:999; border-radius:5px; background: rgba(45,45,45,.65);}
+#homepageSlideshow .pager{position:absolute; bottom:10px; left:10px; z-index:101; border-radius:5px; background: rgba(45,45,45,.65);}
 #homepageSlideshow .pagerSpan{overflow:hidden; width: 35px; height:35px; border-radius:2px; border: 1px solid grey; margin: 10px; display:block; float: left;}
 
 #homepageFeatures360s { background: #cc4300; box-shadow:0px 3px 5px rgba(0,0,0,.4);}
